[workspace]
members = [
    "blinky",
    "sx127x/sx127x_rs_driver",
    "sx127x/sx127x_rs_lora",
    "sx127x/sx127x_rs_macro",
    "sx127x/sx127x_rs",
    "ttgo_blinky",
    "ttgo_ssd1306",
    "ttgo_sx1276",
]
default-members = []
resolver = "3"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"
