[package]
name = "ttgo_blinky"
version = "0.1.0"
authors = ["Thomas Kilian <thomas-kilian@gmx.net>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "ttgo_blinky"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }

[build-dependencies]
embuild = "0.33"
