[package]
name = "ttgo_sx1276"
version = "0.1.0"
authors = ["Thomas Kilian <thomas-kilian@gmx.net>"]
edition = "2021"
rust-version = "1.77"

[[bin]]
name = "ttgo_sx1276"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
esp-idf-svc = { version = "0.51", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
embedded-hal = { version = "1.0.0" }
sx127x_lora = "0.3.1"
sx127x_rs = { version = "0.1.0", path = "../sx127x/sx127x_rs" }
# syn = "2.0.103"
# quote = "1.0.40"
darling = "0.20.11"
esp-idf-sys = "0.36.1"

[build-dependencies]
embuild = "0.33"
